package protobuf;

// Rank - hand rank
enum Rank {
  StraightFlush = 0;
  FourKind = 1;
  FullHouse = 2;
  Flush = 3;
  Straight = 4;
  ThreeKind = 5;
  TwoPair = 6;
  OnePair = 7;
  HighCard = 8;

  BadugiFour = 9;
  BadugiThree = 10;
  BadugiTwo = 11;
  BadugiOne = 12;

  CompleteLow = 13;
  IncompleteLow = 14;
}

// Hand - hand info
message Hand {
  required Rank Rank = 1;
  required bytes Value = 2;
  required bytes High = 3;
  required bytes Kicker = 4;
}

// ShowHand - notify show hand
message ShowHand {
  required int32 Pos = 1;
  required string Player = 2;
  required bytes Cards = 3;
  required Hand Hand = 4;
  required string HandString = 5;
}

// ShowCards - notify show cards
message ShowCards {
  required int32 Pos = 1;
  required string Player = 2;
  required bytes Cards = 3;
  required bool Muck = 4 [default = false];
}

// Winner - notify winner
message Winner {
  required int32 Pos = 1;
  required string Player = 2;
  required double Amount = 3;
}
